--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -44,6 +44,9 @@ input, select {
     width:100%;
     height:25px;
 }
+table{
+    width: 100%;
+}
 .signheader{
     /* width: 100%; */
     min-height: 30px;
@@ -54,10 +57,43 @@ input, select {
     color: #fff;
     border: 1px solid darkgreen;
 }
+#logo{
+    float:left;
+    width: 20%;
+}
+#logoimg{
+    padding-left:20px;
+}
+#headerheading{
+    float:left;
+    width:20%;
+    padding-left:200px;
+    text-align: center;
+}
+#adminheaderheading{
+    float:left;
+    width:20%;
+    padding-left:100px;
+    text-align: center;
+}
+#profilepic{
+    float:right;
+    padding-right:5px;
+    border-radius:5%;
+}
+#cartnumber{
+    color: red;
+}
+.secondheader{
+    width:100%;
+    height:5vh;
+    margin-top:60px;
+    padding-top: 5px;
+}
 .borders{
     border: 1px solid black;
 }
-.row{
+.logincontent{
     padding-top: 10vh;
     width: 100%;
     height: 100vh;
@@ -66,13 +102,21 @@ input, select {
     float: left;
     width: 53%;
     padding: 20px;
-    /* height: 300px; Should be removed. Only for demonstration */
 }
 .column2 {
     float: left;
     width:33%;
     padding: 10px;
-    /* height: 300px; Should be removed. Only for demonstration */
+}
+.imagecol {
+    float: left;
+    width: 33%;
+    padding: 20px;
+}
+.contentcol {
+    float: left;
+    width:53%;
+    padding: 10px;
 }
 
 /* Clear floats after the columns */
@@ -80,6 +124,40 @@ input, select {
     content: "";
     display: table;
     clear: both;
+}
+.logout{
+    float:right;
+    width:5%;
+}
+.cart{
+    float:right;
+    width:5%;
+    margin-left:20px;
+}
+.search{
+    float:right;
+    width:20%;
+}
+.content{
+    margin-top: 10px;
+    min-height: 100vh;
+}
+.item{
+    width:80%;
+    height:30vh;
+}
+.itemimage{
+    float:left;
+    width:30%;
+}
+.itemdetails{
+    float:left;
+    width:50%;
+}
+.additem{
+    width:50%;
+    padding-left:20%;
+    padding-top: 1%;
 }
 .login-image{
     margin-left:300px;
